**pnp-0.6.13 ??/??/2011**
  * Feature: New option --ignore-hosts added to check_pnp_rrds.pl ( by Jochen Bern )
  + Bugfix:  rrd_convert.pl: parse_xml_filename() regex fix

**pnp-0.6.12 04/22/2011**
  * Feature: mod_gearman support added
  * Feature: rrd_convert.pl is now able to convert all RRDs from RRD_STORAGE_TYPE=SINGLE to RRD_STORAGE_TYPE=MULTIPLE
  * Feature: New template check_gearman.php
  * Feature: Install process_perfdata.cfg and npcd.cfg by default
  * Bugfix:  rrd_convert.pl is now able to parse xml dumps created by rrdtool 1.4.x  
  * Bugfix:  process_perfdata.pl default timeout value set to 15 seconds
  * Info: Version used by OMD-0.48 [[http://omdistro.org|OMD]]

**pnp-0.6.11 01/15/2011**
  * Bugfix: urldecoding fixed 
  * Bugfix: Zoom in/out is working again ( Reported by Thorben Soehl )
  * Featue: npcd.cfg -  New option perfdata_file_processing_interval used by npcdmod
  * Info: Version used by OMD-0.46 [[http://omdistro.org|OMD]]

**pnp-0.6.10 12/15/2010**

  * Feature: Add RRDTool Option --only-graph if graph height is below 32px to create thumbnails 
  * Feature: RRDTool Option --width and --height is now allowed in templates
  * Feature: RRDTool DS Type for UOM of "c" changed from COUNTER to DERIVE   
  * Feature: Pass query string from special controller to image controller ( Matthew Garrett ) 
  * Feature: Authorisation against [[http://mathias-kettner.de/checkmk_livestatus.html|mk_livestatus]] API added
  * Feature: Sample nginx webserver config added ( by evax@users.sourceforge.net )
  * Feature: Kohana backport to support PHP 5.1.6 ( Kudos to Andreas Ericsson )
  * Bugfix: Sort list of special templates
  * Bugfix: Urlencode hostname and service description  ( Reported by Yannick ) 
  * Bugfix: corrected warning/critical thresholds in ticker/alerter functions

**pnp-0.6.7 09/27/2010**

  * Bugfix: Page config parser fix (Beau Gunderson) 
  * Bugfix: Zoom window size fixed (Report by Rudolf Labuschagne) 