@@ -56,6 +56,8 @@ Matthew Garrett -
 Thomas Charbonnel - nginx webserver config
 Richard Allen - Patches and feedback
 Falko Koglin - Patches
+Jochen Bern - Patches
+Mike Liebsch - Patches
 
 ###########################################
 #           NPCD Thanks                   #
