@@ -1,6 +1,7 @@
 **pnp-0.6.13 ??/??/2011**
   * Feature: New option --ignore-hosts added to check_pnp_rrds.pl ( by Jochen Bern )
-  + Bugfix:  rrd_convert.pl: parse_xml_filename() regex fix
+  * Feature: New options zgraph_width and zgraph_height in config.php ( Mike Liebsch )
+  * Bugfix:  rrd_convert.pl: parse_xml_filename() regex fix
 
 **pnp-0.6.12 04/22/2011**
   * Feature: mod_gearman support added
